# LiQuID

./: CITATION.cff  CMakeLists.txt  LICENSE  README.md
Benchmarks/: BENCHMARKS.md  Makefile  bench1a_sem_scaling.cpp  bench1b_adaptive_stopping.cpp  bench1b_adaptive_stopping_plot.py  bench2_variance_dependence.cpp  bench2_variance_dependence_plot.py  bench3_fixed_vs_adaptive.cpp  bench3_fixed_vs_adaptive_plot.py  run_benchmarks.sh  validate_sem_scaling.py
Benchmarks/results/: bench1a_sem_scaling.csv  bench2_main.csv  bench2_variance.csv  bench3_adaptive.csv  bench3_comparison.csv  bench3_fixed.csv  bench_adaptive_stopping.csv
doc/: LiQuID_User_Guide_v0.7.0.tex
examples/: Makefile  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  jc_steady_state.cpp
include/liquid/: liquid.hpp
include/liquid/core/: config.hpp  rng.hpp  types.hpp
include/liquid/ensemble/: adaptive_allocator.hpp  convergence_monitor.hpp  ensemble_manager.hpp  ml_policy.hpp  observable_accumulator.hpp  running_statistics.hpp  smart_policies.hpp
include/liquid/linalg/: dense.hpp  sparse.hpp
include/liquid/ode/: dopri45.hpp  rk4.hpp
include/liquid/simulation/: parameter_sweep.hpp  simulation.hpp
include/liquid/system/: lindblad.hpp  lindblad_sparse.hpp  open_system.hpp  open_system_ext.hpp
include/liquid/trajectory/: mcwf_propagator.hpp  trajectory_state.hpp
src/core/: rng.cpp
tests/: CMakeLists.txt  test_framework.hpp
tests/benchmark/: Makefile  QuTip_single_qubit.py  plot.py  qubit_dynamics.cpp  run_universal.sh
tests/unit/: test_dopri45.cpp  test_ensemble.cpp  test_linalg.cpp  test_ml_policy.cpp  test_opensystem.cpp  test_parameter_sweep.cpp  test_rng.cpp  test_running_statistics.cpp  test_sparse.cpp  test_trajectory_state.cpp
tests/validation/: cavity_qed.cpp  driven_two_level.cpp  ensemble_convergence.cpp  ml_policy_validation.cpp  parameter_sweep_validation.cpp  smart_stopping.cpp  two_level_decay.cpp
